# yoshimi

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
plugin/: DistrhoPluginInfo.h  YoshimiEditor.cpp  YoshimiEditor.h  YoshimiMusicIO.cpp  YoshimiMusicIO.h  YoshimiPlugin.cpp  YoshimiPlugin.h
src/: CMakeLists.txt
src/DPF_Plugin/: CMakeLists.txt  DistrhoPluginInfo.h  YoshimiEditor.cpp  YoshimiMusicIO.cpp  YoshimiMusicIO.h  YoshimiPlugin.cpp  YoshimiPlugin.h
ui/: CMakeLists.txt
ui/Exchange/: Data_Banks.cpp  Data_MasterUI.cpp  Exchange.cpp  Exchange.hpp  ParamStorage.h
